--- a/socket_controller/package.json
+++ b/socket_controller/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "pigpio": "^3.3.0",
     "rpio": "^2.2.0",
     "ws": "^7.4.2"
   }
