--- a/service/drone.service
+++ b/service/drone.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 Restart=always
-ExecStart=/home/pi/dualwheel-drone/socket_controller/startServer
+ExecStart=node /home/pi/dualwheel-drone/socket_controller/bin/www
 
 [Install]
 WantedBy=multi-user.target
