--- a/socket_controller/package.json
+++ b/socket_controller/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "create2": "^1.3.1",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
